# simple_picture

./: .claudeignore  .gitignore  .nsis-config.json  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  README.md  resources.qrc
.github/workflows/: build.yml
debian/: changelog  control  copyright  rules
docs/: architecture.md  test-plan.md
installer/: EasyPicture.nsi  SimplePicture.nsi  build_installer.sh
resources/: easypicture.desktop  simplepicture.desktop
src/: main.cpp  version.h.in
src/core/: ImageCache.cpp  ImageCache.h  ImageLoader.cpp  ImageLoader.h  ImageNavigator.cpp  ImageNavigator.h
src/ui/: ChangelogDialog.cpp  ChangelogDialog.h  ImageView.cpp  ImageView.h  MainWindow.cpp  MainWindow.h
tests/: test_ImageCache.cpp  test_ImageLoader.cpp  test_ImageNavigator.cpp  test_main.cpp
